--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ html {
 }
 
 #container {
-  max-width: 1000px;
+  /* max-width: 1000px; */
   margin: 4em auto;
   border: 1px solid black;
 }
@@ -36,7 +36,7 @@ html {
 .graph-painter {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: top;
   justify-content: space-around;
   margin: 2em .5em;
 }
@@ -52,7 +52,7 @@ html {
   height: 400px;
 }
 
-.graph-controller > div {
+.graph-controller>div {
   margin: .5em .5em;
 }
 
@@ -66,7 +66,7 @@ html {
   width: 100%;
 }
 
-.graph-input-row > label {
+.graph-input-row>label {
   margin-bottom: .2em;
 }
 
@@ -83,7 +83,34 @@ div.button-row {
   justify-content: space-around;
 }
 
-.button-row > button {
+.button-row>button {
   font-size: 1.5em;
   padding: 0 .5em;
+}
+
+/* || Graph Examples Grid */
+.graph-examples {
+  display: grid;
+  min-width: 300px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
+  gap: 1em;
+  margin: 1em;
+}
+
+.graph-examples>div {
+  border-radius: 5px;
+  padding: 10px;
+  background-color: rgb(207, 232, 220);
+  border: 2px solid rgb(70, 185, 227);
+
+  /* make text center */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.graph-example:hover {
+  background-color: rgb(70, 185, 227);
+  color: white;
 }
